<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item android:id="@+id/action_home"
        android:title="Home"
        android:icon="@drawable/ic_action_home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_dm"
        android:icon="@android:drawable/ic_dialog_email"
        android:title="DM"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_create"
        android:title="Create"
        android:icon="@drawable/ic_action_add"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_search"
        android:title="Search"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_profile"
        android:enabled="true"
        android:title="Profile"
        android:icon="@drawable/ic_action_user"
        app:showAsAction="always"/>
</menu>