<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/searchText"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.searchPage.SearchFragment">

    <EditText
        android:id="@+id/spotifySearch"
        android:layout_width="349dp"
        android:layout_height="43dp"
        android:layout_gravity="top"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="Search for a song..."
...
